...
                          decoration: BoxDecoration(
                            color: const Color(0xFFC7C6EA),
                            borderRadius: BorderRadius.circular(40),
                          ),
                          alignment: Alignment.center,
                          child: const Text(
                            '함께하기',
                            style: TextStyle(
                              fontFamily: 'Inria Sans',
                              fontSize: 40,
                              color: Color(0xFF0A0909),
                            ),
                          ),
...
